--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,17 @@
   </head>
   <body>
     <header>
-      <!-- Paste the same nav from index.html here -->
+      <nav>
+        <a href="index.html" class="logo">The Grand Archive</a>
+        <ul>
+          <li><a href="leaderboard.html">Leaderboards</a></li>
+          <li>
+            <a href="profile.html" id="profile-link" class="hidden">Profile</a>
+          </li>
+          <li><button id="auth-button">Login</button></li>
+          <li><button id="theme-toggle">🌙</button></li>
+        </ul>
+      </nav>
     </header>
 
     <main id="profile-page" class="container hidden">
