--- a/quiz.html
+++ b/quiz.html
@@ -12,7 +12,17 @@
   </head>
   <body>
     <header>
-      <!-- Same nav as index.html -->
+      <nav>
+        <a href="index.html" class="logo">The Grand Archive</a>
+        <ul>
+          <li><a href="leaderboard.html">Leaderboards</a></li>
+          <li>
+            <a href="profile.html" id="profile-link" class="hidden">Profile</a>
+          </li>
+          <li><button id="auth-button">Login</button></li>
+          <li><button id="theme-toggle">🌙</button></li>
+        </ul>
+      </nav>
     </header>
 
     <main class="container">
