--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
           <li>
             <a href="profile.html" id="profile-link" class="hidden">Profile</a>
           </li>
+          <li>
+            <a href="settings.html"><i class="fas fa-cog"></i>Settings</a>
+          </li>
           <li><button id="auth-button">Login</button></li>
           <li><button id="theme-toggle">🌙</button></li>
         </ul>
@@ -58,5 +61,6 @@
     </main>
 
     <script type="module" src="assets/js/main.js"></script>
+    <div id="notification-container"></div>
   </body>
 </html>
