--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,20 @@
     <title>Your Profile</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-TCT97QXVXG"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-TCT97QXVXG");
+  </script>
   <body>
     <header>
       <nav>
@@ -19,7 +33,6 @@
             <a href="settings.html"><i class="fas fa-cog"></i>Settings</a>
           </li>
           <li><button id="auth-button">Login</button></li>
-          <li><button id="theme-toggle">🌙</button></li>
         </ul>
       </nav>
     </header>
