--- a/leaderboard.html
+++ b/leaderboard.html
@@ -66,6 +66,7 @@
             <th>Rank</th>
             <th>Player</th>
             <th>Score</th>
+            <th>Time</th>
           </tr>
         </thead>
         <tbody id="leaderboard-body">
