--- a/settings.html
+++ b/settings.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Settings - The Grand Archive</title>
     <link rel="stylesheet" href="assets/css/style.css" />
-    <!-- Add FontAwesome for the icons in the toggle switch -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <!-- Google tag (gtag.js) -->
   <script
