--- a/leaderboard.html
+++ b/leaderboard.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <!-- Google tag (gtag.js) -->
   <script
@@ -76,6 +77,13 @@
           </tr>
         </tbody>
       </table>
+
+      <div id="user-rank-container" class="hidden">
+        <h3>Your Rank</h3>
+        <table id="user-rank-table">
+          <!-- User's rank will be dynamically inserted here -->
+        </table>
+      </div>
     </main>
 
     <script type="module" src="assets/js/main.js"></script>
