--- a/quiz-library.html
+++ b/quiz-library.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Quiz Library - The Grand Archive</title>
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <!-- Google tag (gtag.js) -->
   <script
