--- a/quiz.html
+++ b/quiz.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <!-- Google tag (gtag.js) -->
   <script
@@ -58,7 +59,8 @@
       <div id="quiz-container" class="hidden">
         <div id="quiz-header">
           <h1 id="quiz-title"></h1>
-          <div id="timer">Time: <span>300</span>s</div>
+          <div id="quiz-progress">0/0</div>
+          <div id="timer">Time: <span>00:00</span>s</div>
         </div>
         <div id="question-container">
           <p id="question-text"></p>
